# SimpleSQL

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/API/: API.cpp  API.hpp
src/BufferManager/: Block.cpp  Block.hpp  BufferManager.cpp  BufferManager.hpp
src/CatalogManager/: Attribute.hpp  CatalogManager.cpp  CatalogManager.hpp  Schema.cpp  Schema.hpp
src/FileManager/: FileManager.cpp  FileManager.hpp
src/IndexManager/: BplusTree.cpp  BplusTree.hpp  IndexManager.cpp  IndexManager.hpp
src/IndexManger/: BplusTree.cpp  BplusTree.hpp  IndexManager.cpp  IndexManager.hpp
src/Interpreter/: Driver.cpp  Driver.hpp  Scanner.hpp  interpreter.l  interpreter.y
src/RecordManager/: Record.hpp  RecordManager.cpp  RecordManager.hpp
src/Type/: Value.cpp  Value.hpp  constraint.hpp
src/utils/: ErrorManager.hpp  config.hpp  info.hpp
test/: test.sql
